DEV-15508 - Fix for feature not showing on mobile

--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -64,7 +64,7 @@
         height: @value__feature--height--tablet;
     }
     @media @mobile {
-        min-height: @value__feature--height--mobile;
+        min-height: 250px;
         height: @value__feature--height--mobile;
     }
 }
